tests/int/deps_command/snapshots/integration__int__deps_command__orphans__should_orphans_for_modules_fixture.snap
---
source: tests/int/deps_command/orphans.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - deps
    - "--orphans"
---
success: true
exit_code: 0
----- stdout -----
advanced_globs::prelude
app
baz
crate_root_reexport
foo
foo::other
glob_showcase::config
glob_showcase::prelude
glob_showcase::utils
group_patterns
inline_modules::nested
inline_modules::outer
main
uses_empty_glob

----- stderr -----
