tests/int/deps_command/snapshots/integration__int__deps_command__orphans__should_orphans_for_own_crate.snap
---
source: tests/int/deps_command/orphans.rs
info:
  program: crawk
  args:
    - deps
    - "--orphans"
---
success: true
exit_code: 0
----- stdout -----
discover::module_tree
format
main

----- stderr -----
