tests/int/deps_command/snapshots/integration__int__deps_command__orphans__should_orphans_with_include_tests_for_cycles_fixture.snap
---
source: tests/int/deps_command/orphans.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/cycles
    - deps
    - "--orphans"
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
lib
standalone

----- stderr -----
